Revision history for Perl extension AnyEvent.

5.12 Tue Sep  1 20:26:50 CEST 2009
	- be more lenient when parsing resolv.conf files, as some people
          use hashmarks as comment indicator inside directives (reported
          by Michael S. Fischer).
        - use same set of warnings as common::sense 2.0.
	- fix a potential 32 bit overflow issue due to perl having problems
          with large hex constants in the Perl backend.
        - do not use the slower 5.6 version fo the enc_name code in AnyEvent::DNS
          by default.
        - fix some prototypes.
	- (optionally) require Async::Interrupt 1.02.
        - replace opendns fallbacks by verizon/level3 public dns servers.

5.112 Fri Aug 21 13:59:04 CEST 2009
        - AnyEvent::Handle could cause hard crashes in Net::SSLeay when
          using starttls with an illegal/uncreatable tls context.
        - port to broken win32 perls.

5.111 Sun Aug 16 18:44:36 CEST 2009
	- perl errornously requires sockaddr_un structures returned by the
          kernel to have a specific length. work around this bug by padding
          sockaddr_un structures (found to fail on OS X, as perl only uses
          the correct code for GNU/Linux, but likely to fail on other
          OSes as well).

5.11 Wed Aug 12 17:49:37 CEST 2009
        - fixed a bug in run_cmd with input from filename.
        - create a json coder object when none is given in write direction
          to reduce dependency on JSON.

5.1  Tue Aug 11 03:17:32 CEST 2009
        - tcp_connect now reports the correct error in $!, not an unrelated
          one (was broken since 4.91).
        - AE::Handle did not properly clear rtimeout/wtimeout watchers
          when retrying a tcp_connect.
        - new functions: AnyEvent::Util::run_cmd and close_all_fds_except.
        - fixed wrong documentation in AE::Socket.

5.01 Mon Aug 10 03:16:32 CEST 2009
	- last release broke EV child watchers :/.

5.0  Sun Aug  9 17:32:09 CEST 2009