@@ -1,5 +1,9 @@
 Revision history for Perl extension AnyEvent.
 
+TODO: packagename for ae types
+
+	- AnyEvent::Handle: new options "keepalive" and "oobinline".
+
 5.12 Tue Sep  1 20:26:50 CEST 2009
 	- be more lenient when parsing resolv.conf files, as some people
           use hashmarks as comment indicator inside directives (reported
